--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,61 @@
 body {
   margin: 0;
   background-color: black;
+  color: white;
+}
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 300px;
+  height: 300px;
+  margin: -150px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.progress {
+  background: conic-gradient(white var(--progress), black 0deg);
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: load 3.5s;
+  animation-fill-mode: forwards;
+}
+
+.progress-inner {
+  background-color: black;
+  border-radius: 50%;
+  width: 99%;
+  height: 99%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: spin 3s infinite ease-in-out;
+}
+
+@keyframes load {
+  0% {
+    --progress: 0%;
+  }
+  100% {
+    --progress: 100%;
+  }
+}
+
+@property --progress {
+  syntax: '<percentage>';
+  inherits: false;
+  initial-value: 0%;
 }
