--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,11 @@ body {
   inherits: false;
   initial-value: 0%;
 }
+
+canvas {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh
+}
