added working animation loop for water height

--- a/src/index.css
+++ b/src/index.css
@@ -66,10 +66,7 @@ body {
   initial-value: 0%;
 }
 
-canvas {
-  position: absolute;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100vh
+#canvas {
+  position: fixed;
+  right: 100%;
 }
